--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,6 +1,7 @@
 <div class="container h-100 w-50">
-  <div class="row h-100 justify-content-center align-items-center">  
+  <div class="row h-100 align-items-center">
     <div class="container">
+      <img class="img-fluid mx-auto d-block" src="../../../assets/logo.jpg" alt="Company name">
       <form *ngIf="!isAudience" class="form-group" novalidate #roomForm="ngForm" (ngSubmit)="submitForm(roomForm)">
         <!-- <div class="col-3">
           <div class="form-check">
@@ -15,7 +16,7 @@
           <input type="submit" class="btn btn-block btn-outline-primary" value="Join room" [disabled]="valid"/>
         </div>
       </form>
-      <div *ngIf="isAudience" class="row col-12">
+      <div *ngIf="isAudience" class="row col-12 d-flex justify-content-center">
         <button class="btn btn-outline-success m-2" type="button" (click)="captureScreen()" [disabled]="canCapture">Capture screen</button>
         <button class="btn btn-outline-warning m-2" type="button" (click)="leaveRoom(true)" [disabled]="canCapture">Leave room {{roomName}}</button>
       </div>
