--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -17,8 +17,8 @@
         </div>
       </form>
       <div *ngIf="isAudience" class="row col-12 d-flex justify-content-center">
-        <button class="btn btn-outline-success m-2" type="button" (click)="captureScreen()" [disabled]="canCapture">Capture screen</button>
-        <button class="btn btn-outline-warning m-2" type="button" (click)="leaveRoom(true)" [disabled]="canCapture">Leave room {{roomName}}</button>
+        <button class="btn btn-success m-2" type="button" (click)="captureScreen()" [disabled]="canCapture">Capture screen</button>
+        <button class="btn btn-warning m-2" type="button" (click)="leaveRoom(true)" [disabled]="canCapture">Leave room: {{roomName}}</button>
       </div>
     </div>
   </div>
